SAV-3843 Fix to Accordion Arrow so that it is rotated left when collapsed.

--- a/src/public/packages/search-skin/sass/src/panel/DALGroups.scss
+++ b/src/public/packages/search-skin/sass/src/panel/DALGroups.scss
@@ -29,7 +29,8 @@
 		padding: 5px 0 5px 60px;
 	}
 	.#{$prefix}tool-expand-bottom{
-		background-position: 0 -60px;
+		background-position: 0 -75px;
+		@include rotate(-90deg);
 	}
 	.#{$prefix}tool-collapse-top{
 		background-position: 0 -75px;
